vpn01/configuration/iptables
*nat
:PREROUTING ACCEPT [81:4062]
:POSTROUTING ACCEPT [8:644]
:OUTPUT ACCEPT [8:644]
-A POSTROUTING -s 10.1.1.0/24 -o eth0 -j MASQUERADE 
-A POSTROUTING -s 10.1.2.0/24 -o eth0 -j MASQUERADE 
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [758:156519]
-A INPUT -p tcp -m tcp --dport 1194 -j ACCEPT 
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -i tun0 -o eth0 -j ACCEPT 
-A FORWARD -i eth0 -o tun0 -j ACCEPT 
-A FORWARD -i tun1 -o eth0 -j ACCEPT 
-A FORWARD -i eth0 -o tun1 -j ACCEPT 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
